# cds-videos

./: .bowerrc  .checkignore  .ci-requirements-build.sh  .dockerignore  .gitignore  .jshintignore  .jshintrc  .kwalitee.yml  .travis-extra-install.sh  .travis-requirements-build.sh  .travis.yml  AUTHORS.rst  Bruno Collection - CDS Videos Publish Video.json  CHANGES.rst  CLAUDE.md  Dockerfile  Dockerfile.base  Gruntfile.js  INSTALL.rst  LICENSE  MANIFEST.in  Procfile  README.rst  Upgrade.txt  babel.cfg  babel.ini  base-pinned.requirements.txt  base.requirements.txt  bower-base.json  bower.json  cds_statistics.html  config.py  dev.requirements.txt  development.requirements.txt  docker-compose.full.yml  docker-compose.yml  docker-services.yml  elasticsearch-docker.yml  elasticsearch.jquery.min.js  elasticsearch.yml  (+24 more)
.github/workflows/: tests.yml
base/: views.py
benchmarks/: anonymous.py
cds/: __init__.py  celery.py  cli.py  config.py  convert_esdump.py  dump_counters.py  dump_stats.py  factory.py  import_stats.py  version.py  wsgi.py
cds/base/: __init__.py  bundles.py  receivers.py  views.py
cds/base/dojson/: api.py  main.py  utils.py
cds/base/fixtures/: __init__.py  accounts.py  bibauthorid.py  bibclassify.py  bibexport.py  bibknowledge.py  bibrank.py  oai_harvest.py  webjournal.py  websession.py  websubmit.py
cds/base/mixer/: collection.py  field_tag.py  format.py  index.py
cds/base/output_formats/: HD.bfo  collection_featured_record.yml  hb.yml  hd.yml
cds/base/templates/: cern_header.html  footer.html  header.html  home.html  page.html
cds/base/testsuite/: __init__.py
cds/base/translations/: cds.pot
cds/demosite/: __init__.py  manage.py  receivers.py
cds/demosite/data/: cds-demobibdata.xml  cds-photos.xml
cds/modules/: __init__.py
cds/modules/access/: access_control.py
cds/modules/announcements/: __init__.py  admin.py  models.py  views.py
cds/modules/cds_iiif/: __init__.py  ext.py  utils.py
cds/modules/cds_socketio/: __init__.py  ext.py
cds/modules/deposit/: api.py  bundles.py  errors.py  ext.py  facets.py  fetcher.py  fetchers.py  form.py  indexer.py  jsonresolver.py  links.py  minters.py  permissions.py  receivers.py  resolver.py  search.py  tasks.py  views.py
cds/modules/ffmpeg/: __init__.py  errors.py  ffmpeg.py
cds/modules/files/: __init__.py  ext.py  receivers.py
cds/modules/fixtures/: __init__.py  cli.py  ext.py  video_utils.py
cds/modules/flows/: __init__.py  _compat.py  admin.py  api.py  config.py  decorators.py  deposit.py  errors.py  files.py  loaders.py  migration.py  models.py  permissions.py  serializers.py  status.py  task_api.py  tasks.py  utils.py  views.py
cds/modules/home/: __init__.py  decorators.py  views.py
cds/modules/invenio_deposit/: __init__.py  api.py  bundles.py  config.py  errors.py  ext.py  fetchers.py  minters.py  permissions.py  providers.py  proxies.py  scopes.py  search.py  signals.py  utils.py
cds/modules/ldap/: client.py  decorators.py  serializers.py  views.py
cds/modules/legacy/: __init__.py  admin.py  minters.py  models.py  redirector.py  resolver.py
cds/modules/maintenance/: __init__.py  cli.py  subformats.py  tasks.py
cds/modules/migrator/: cli.py  records.py  tasks.py  utils.py
cds/modules/oauthclient/: __init__.py  cern_openid.py
cds/modules/opencast/: api.py  error.py  tasks.py  utils.py
cds/modules/personal_collection/: api.py  bundles.py  config.py  errors.py  models.py  registry.py  restful.py  views.py
cds/modules/previewer/: api.py  bundles.py  views.py
cds/modules/record_split/: default.py  errors.py  photo.py  utils.py
cds/modules/records/: __init__.py  api.py  bundles.py  fetchers.py  forms.py  jsonresolver.py  links.py  minters.py  permissions.py  providers.py  resolver.py  search.py  symlinks.py  tasks.py  utils.py  validators.py  views.py
cds/modules/redirector/: __init__.py  views.py
cds/modules/search/: __init__.py  access_control.py
cds/modules/search_ui/: bundles.py  views.py
cds/modules/statistics/: __init__.py  api.py  config.py  page_views.py  restful.py  views.py
cds/testsuite/: __init__.py
cds_demosite/: config.py
cds_demosite/base/: views.py
cds_demosite/fixtures/: bibauthorid.py  bibclassify.py  bibexport.py  bibknowledge.py  bibrank.py  oai_harvest.py  webjournal.py  websearch.py  websession.py  websubmit.py
docker/: docker-entrypoint.sh  wait-for-services.sh
docker/app/: Dockerfile
docker/backend/: Dockerfile
docker/es/: Dockerfile  Dockerfile-old  Dockerfile.arm64  elasticsearch.yml
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: nginx.conf  test.crt
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
rfcs/: videos-0001-weblectures-migration.md
rfcs/0001/: Analysis-to-map-MarcXML-fields-to-CDSVideos.md
scripts/: assets-watch  bootstrap  bootstrap_upgrade  build-assets.sh  celery  console  server  setup  setup-assets.sh  setup-instance.sh  setup-npm.sh  setup-tests  update
tests/: conftest.py  test_cds.py
tests/data/: cds_records_and_files_dump.json  cds_records_demo_1_project.json  cds_records_demo_1_video.json  test.mov  test_videos_projects.json
tests/e2e/: conftest.py  test_frontpage.py  test_search.py  test_search_params.py
tests/unit/: conftest.py  helpers.py  test_access.py  test_access_records.py  test_access_search.py  test_announcements.py  test_category.py  test_cds.py  test_celery.py  test_deposit.py  test_deposit_search.py  test_deposit_validation.py  test_external_user.py  test_ffmpeg.py  test_files_receivers.py  test_fixtures.py  test_flows.py  test_flows_api.py  test_flows_tasks.py  test_flows_upload_file.py  test_flows_views.py  test_frames.py  test_jsonschema.py  test_keyword.py  test_legacy_redirector.py  test_maintenance.py  test_migration.py  test_minters.py  test_previewer.py  test_project.py  test_project_rest.py  test_provider.py  test_record_tasks.py  test_records.py  test_report_number_generation.py  test_schema_datacite.py  test_serializer.py  test_socketio.py  test_video.py  test_video_rest.py  (+7 more)
(+529 files in other folders)
