# -*- coding: utf-8 -*-
#
# This file is part of CDS.
# Copyright (C) 2015, 2016 CERN.
#
# CDS is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# CDS is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with CDS; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.
[metadata]
name = CDS
version = attr: cds.__version__
author = CERN
author_email = cds.support@cern.ch
description = Access articles, reports and multimedia content in HEP
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = GPLv3
url = http://cds.cern.ch/
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    # Invenio core modules
    invenio-app>=1.5.0,<1.6.0
    # upper pinned to minor due to flask 2.3 upgrade changes dependencies
    invenio-base>=1.3.0,<2.0.0
    invenio-cache>=1.1.1,<2.0.0
    invenio-celery>=1.3.0,<2.0.0
    invenio-config>=1.0.3,<1.1.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-db[postgresql]>=1.1.0,<2.0.0
    invenio-search[opensearch2]>=2.1.0,<3.0.0
    # Invenio base bundle
    invenio-admin>=1.5.0,<1.6.0
    invenio-assets>=3.0.0,<4.0.0
    invenio-formatter>=2.0.0,<3.0.0
    invenio-logging[sentry_sdk]>=2.0.0,<3.0.0
    invenio-mail>=2.0.0,<3.0.0
    invenio-rest>=1.3.0,<1.4.0
    invenio-theme>=3.0.0,<4.0.0
    # Invenio auth bundle"
    invenio-access>=2.0.0,<3.0.0
    invenio-accounts>=5.0.0,<6.0.0
    invenio-oauth2server>=2.0.0,<3.0.0
    invenio-oauthclient>=3.0.0,<4.0.0
    invenio-userprofiles>=1.2.4,<1.3.0
    # Invenio metadata bundle
    invenio-indexer>=2.2.0,<3.0.0
    invenio-jsonschemas>=1.1.4,<1.2.0
    invenio-oaiserver>=2.2.0,<2.3.0
    invenio-pidstore>=1.3.0,<1.4.0
    invenio-records-rest>=2.2.0,<3.0.0
    invenio-records>=2.2.1,<3.0.0
    invenio-records-ui>=1.2.0,<1.3.0
    invenio-search-ui>=2.4.0,<3.0.0
    # Invenio files bundle, with only invenio-files-rest"
    invenio-files-rest>=2.0.0,<3.0.0
    invenio-records-files>=1.2.1,<2.0.0
    invenio-iiif>=1.2.0,<1.3.0,
    # Extra deps of Videos,
    invenio-opendefinition>=2.0.0a2,<3.0.0
    invenio-pages>=1.0.0a7,<2.0.0
    invenio-previewer>=2.2.0,<3.0.0
    invenio-stats>=4.0.0,<5.0.0
    pycountry>=20.0.0,<23.0.0
    # needed to have namedtuple json serialized as dict
    simplejson>=3.8.1,<4.0.0
    pluggy>=0.13.1,<1.0.0
    # 4.10.x and onwards breaks the PartialDraft4Validator validators extension
    jsonschema>=4.3.0,<4.10.0
    # Version 2.1.0 removes `TimedJSONWebSignatureSerializer`
    itsdangerous>=1.1,<2.1
    # sqlalchemy needs upgrades in invenio core to unpin
    SQLAlchemy>=1.3.0,<2.0.0
    # Pinned due to before_first_request deprecation https://flask.palletsprojects.com/en/2.2.x/api/#flask.Flask.before_first_request
    Flask>=2.2.0,<2.3.0
    Werkzeug>=2.2.0,<2.3.0
    # check pin
    celery==5.2.7
    # extras
    arrow>=0.7.0,<1.0.0
    CairoSVG>=1.0.20,<2.0.0
    datacite==1.0.1
    dcxml==0.1.1
    dictdiffer==0.9.0
    idutils==0.2.3
    invenio-sequencegenerator==1.0.0a3
    requests-toolbelt>=1.0.0,<2.0.0
    python-ldap>=3.4.0,<3.5.0

[options.extras_require]
tests =
    check-manifest>=0.42
    coverage>=5.3,<8
    mock>=2.0.0
    # pytest-black>=0.3.0
    # pytest-cov>=3.0.0
    pytest-flask>=1.2.0
    pytest-github-actions-annotate-failures>=0.2.0
    pytest-isort>=3.0.0
    # pytest-pydocstyle>=2.2.3
    # pytest-pycodestyle>=2.2.0
    pytest-runner>=2.7.0
    pytest>=5.2,<6.0
    # pytest-mock>=1.0.0
    docker-services-cli>=0.6.1
    importlib-metadata>=4.4,<8.0.0
    importlib-resources>=5.0
xrootd =
    invenio-xrootd==2.0.0a2

[options.entry_points]
console_scripts =
    cds = invenio_app.cli:cli
flask.commands =
    subformats = cds.modules.maintenance.cli:subformats
    videos = cds.modules.maintenance.cli:videos
invenio_admin.views =
    cds_admin = cds.modules.announcements.admin:announcements_adminview
    invenio_flows_flow = cds.modules.flows.admin:flow_model_view
    invenio_flows_task = cds.modules.flows.admin:task_model_view
invenio_assets.webpack =
    cds_theme = cds.modules.theme.webpack:theme
invenio_base.api_apps =
    cds_deposit = cds.modules.deposit.ext:CDSDepositApp
    cds_files_rest = cds.modules.files.ext:CDSFilesRestApp
    cds_xrootd = cds.modules.xrootd:CDSXRootD
    invenio_deposit = cds.modules.invenio_deposit.ext:InvenioDepositREST
invenio_base.api_blueprints =
    cds_records = cds.modules.records.views:blueprint
    cds_stats = cds.modules.stats.views:blueprint
    cds_redirector = cds.modules.redirector.views:api_blueprint
    cds_announcements = cds.modules.announcements.views:api_blueprint
    cds_flows = cds.modules.flows.views:blueprint
    cds_ldap = cds.modules.ldap.views:blueprint
invenio_base.apps =
    cds_deposit = cds.modules.deposit.ext:CDSDepositApp
    cds_main_fixtures = cds.modules.fixtures:CDSFixtures
    cds_xrootd = cds.modules.xrootd:CDSXRootD
    invenio_deposit = cds.modules.invenio_deposit.ext:InvenioDeposit
invenio_base.blueprints =
    cds_deposit = cds.modules.deposit.views:blueprint
    cds_home = cds.modules.home.views:blueprint
    cds_previewer = cds.modules.previewer.views:blueprint
    cds_records = cds.modules.records.views:blueprint
    cds_search_ui = cds.modules.search_ui.views:blueprint
    cds_theme = cds.modules.theme.views:blueprint
    cds_redirector = cds.modules.redirector.views:blueprint
    cern_oauth = cds.modules.oauthclient.cern_openid:cern_openid_blueprint
invenio_config.module =
    cds = cds.config
invenio_db.alembic =
    cds_announcements = cds.modules.announcements:alembic
    invenio_flows = cds.modules.flows:alembic
invenio_jsonschemas.schemas =
    deposit = cds.modules.deposit.schemas
    record = cds.modules.records.schemas
invenio_pidstore.fetchers =
    cds_recid = cds.modules.records.fetchers:recid_fetcher
    cds_catid = cds.modules.records.fetchers:catid_fetcher
    cds_kwid = cds.modules.records.fetchers:kwid_fetcher
    deposit = cds.modules.invenio_deposit.fetchers:deposit_fetcher
invenio_pidstore.minters =
    cds_catid = cds.modules.records.minters:catid_minter
    cds_kwid = cds.modules.records.minters:kwid_minter
    cds_report_number = cds.modules.records.minters:report_number_minter
    cds_recid = cds.modules.records.minters:cds_record_minter
    deposit = cds.modules.invenio_deposit.minters:deposit_minter
invenio_search.mappings =
    records = cds.modules.records.mappings
    deposits = cds.modules.deposit.mappings
    categories = cds.modules.records.mappings
    keywords = cds.modules.records.mappings
invenio_celery.tasks =
    cds_celery_tasks = cds.modules.flows.tasks
    cds_deposit_tasks = cds.modules.deposit
    cds_opencast_tasks = cds.modules.opencast.tasks
    cds_records_tasks = cds.modules.records
    cds_maintenance = cds.modules.maintenance.tasks
invenio_previewer.previewers =
    cds_video = cds.modules.previewer.extensions.video:video
    cds_embed_video = cds.modules.previewer.extensions.video:embed_video
    cds_deposit_video = cds.modules.previewer.extensions.video:deposit_video
    cds_default = cds.modules.previewer.extensions.default
invenio_records.jsonresolver =
    keywords = cds.modules.records.jsonresolver.keywords
    records = cds.modules.records.jsonresolver.records
    deposits = cds.modules.deposit.jsonresolver
invenio_base.finalize_app =
    cds_home = cds.modules.home.views:finalize_app
invenio_oauth2server.scopes =
    deposit_write = cds.modules.invenio_deposit.scopes:write_scope
    deposit_actions = cds.modules.invenio_deposit.scopes:actions_scope
invenio_access.actions =
    deposit_admin_access = cds.modules.invenio_deposit.permissions:action_admin_access

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
# addopts = --black --isort --pydocstyle --cov=cds_videos --cov-report=term-missing
testpaths = tests unit
